Image alignment and size fixes
Former-commit-id: 31ec9620ddaa1c8e61dbb18ad6df20a9bdca1c32 [formerly 1b828e33b86bc8bdfb8121202f1d71e0f325d8e3]
Former-commit-id: f63aa5204ff4569eb83729a3c7dc3d17d60f1f7b

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,6 +25,7 @@ main img {
   max-width: 100%;
   overflow: hidden;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  max-height: 50vh;
 }
 
 body.gps {
@@ -46,6 +47,7 @@ p > code {
 
 figure {
   margin: auto 0 1rem 0;
+  text-align: center;
 }
 
 nav {
